@@ -3740,6 +3740,8 @@ STR_6667    :Fauna
 STR_6668    :Staff cheats
 STR_6669    :Show staff cheats
 STR_6670    :Guest behaviour
+STR_6671    :Show ‘real’ names of staff
+STR_6672    :Toggle between showing ‘real’ names of staff and staff numbers
 
 #############
 # Scenarios #
