@@ -1152,8 +1152,10 @@ namespace OpenRCT2
         STR_PATH_TO_RCT1_IS_WRONG_VERSION = 6372,
         STR_PATH_TO_RCT1_TIP = 6038,
         STR_PATH_TO_RCT1_WRONG_ERROR = 6037,
-        STR_REAL_NAME = 2487,
-        STR_REAL_NAME_TIP = 2488,
+        STR_REAL_NAME_GUESTS = 2487,
+        STR_REAL_NAME_GUESTS_TIP = 2488,
+        STR_REAL_NAME_STAFF = 6671,
+        STR_REAL_NAME_STAFF_TIP = 6672,
         STR_REAL_VALUES = 2359,
         STR_RENDERING_GROUP = 5477,
         STR_RENDER_WEATHER_EFFECTS = 5920,
