@@ -1599,8 +1599,19 @@ void Peep::FormatNameTo(Formatter& ft) const
 {
     if (Name == nullptr)
     {
+        auto& gameState = GetGameState();
+        const bool showGuestNames = gameState.Park.Flags & PARK_FLAGS_SHOW_REAL_GUEST_NAMES;
+        const bool showStaffNames = gameState.Park.Flags & PARK_FLAGS_SHOW_REAL_STAFF_NAMES;
+
         auto* staff = As<Staff>();
-        if (staff != nullptr)
+        const bool isStaff = staff != nullptr;
+
+        if ((!isStaff && showGuestNames) || (isStaff && showStaffNames))
+        {
+            auto realNameStringId = GetRealNameStringIDFromPeepID(PeepId);
+            ft.Add<StringId>(realNameStringId);
+        }
+        else if (isStaff)
         {
             auto staffNameIndex = static_cast<uint8_t>(staff->AssignedStaffType);
             if (staffNameIndex >= std::size(_staffNames))
@@ -1610,11 +1621,6 @@ void Peep::FormatNameTo(Formatter& ft) const
 
             ft.Add<StringId>(_staffNames[staffNameIndex]);
             ft.Add<uint32_t>(PeepId);
-        }
-        else if (GetGameState().Park.Flags & PARK_FLAGS_SHOW_REAL_GUEST_NAMES)
-        {
-            auto realNameStringId = GetRealNameStringIDFromPeepID(PeepId);
-            ft.Add<StringId>(realNameStringId);
         }
         else
         {
@@ -2654,19 +2660,20 @@ int32_t PeepCompare(const EntityId sprite_index_a, const EntityId sprite_index_b
  *
  *  rct2: 0x0069926C
  */
-void PeepUpdateNames(bool realNames)
+void PeepUpdateNames()
 {
     auto& gameState = GetGameState();
-    if (realNames)
-    {
+    auto& config = Config::Get().general;
+
+    if (config.ShowRealNamesOfGuests)
         gameState.Park.Flags |= PARK_FLAGS_SHOW_REAL_GUEST_NAMES;
-        // Peep names are now dynamic
-    }
     else
-    {
         gameState.Park.Flags &= ~PARK_FLAGS_SHOW_REAL_GUEST_NAMES;
-        // Peep names are now dynamic
-    }
+
+    if (config.ShowRealNamesOfStaff)
+        gameState.Park.Flags |= PARK_FLAGS_SHOW_REAL_STAFF_NAMES;
+    else
+        gameState.Park.Flags &= ~PARK_FLAGS_SHOW_REAL_STAFF_NAMES;
 
     auto intent = Intent(INTENT_ACTION_REFRESH_GUEST_LIST);
     ContextBroadcastIntent(&intent);
