@@ -460,6 +460,6 @@ void PeepDecrementNumRiders(Peep* peep);
 void PeepSetMapTooltip(Peep* peep);
 int32_t PeepCompare(const EntityId sprite_index_a, const EntityId sprite_index_b);
 
-void PeepUpdateNames(bool realNames);
+void PeepUpdateNames();
 
 StringId GetRealNameStringIDFromPeepID(uint32_t id);
