@@ -34,6 +34,7 @@ enum : uint32_t
     PARK_FLAGS_FORBID_MARKETING_CAMPAIGN = (1 << 7),
     PARK_FLAGS_ANTI_CHEAT_DEPRECATED = (1 << 8), // Not used anymore, used for cheat detection
     PARK_FLAGS_PREF_MORE_INTENSE_RIDES = (1 << 9),
+    PARK_FLAGS_SHOW_REAL_STAFF_NAMES = (1 << 10),
     PARK_FLAGS_NO_MONEY = (1 << 11),
     PARK_FLAGS_DIFFICULT_GUEST_GENERATION = (1 << 12),
     PARK_FLAGS_PARK_FREE_ENTRY = (1 << 13),
