@@ -3,6 +3,7 @@
 - Feature: [#15642] Track design placement can now use contruction modifier keys (ctrl/shift).
 - Feature: [#21521] [Plugin] Add hook 'park.guest.softcap.calculate' called before calculating the soft guest cap.
 - Change: [#22596] Land ownership fixes described by .parkpatch files are now only considered on scenarios.
+- Change: [#22724] Staff now have optional ‘real’ names as well.
 - Change: [#22740] Add virtual floor to shifted track design placement.
 - Fix: [#2614] The colour tab of the ride window does not hide invisible cars (original bug).
 - Fix: [#15406] Tunnels on steep Side-Friction track are drawn too low.
